--- a/src/produto/index.scss
+++ b/src/produto/index.scss
@@ -112,6 +112,8 @@
             display: flex;
             flex-direction: row;
             align-items: center;
+            margin-top: 15px;
+            margin-bottom: 30px;
             gap: 15px;
         }
 
@@ -135,7 +137,8 @@
 
         .txt{
             color: #000;
-
+            margin-top: 30px;
+            margin-bottom: 20px;
             text-align: center;
         }
 
