--- a/src/produto/index.scss
+++ b/src/produto/index.scss
@@ -26,7 +26,8 @@
         .prd{
             font-size: 50px;
             font-weight: 500;
-            margin-bottom: 130px;
+            margin-bottom: 50px;
+            margin-top: 80px;
         }
 
         nav{
@@ -45,6 +46,7 @@
             margin-left: 50px;
             border-radius: 5px;
             font-weight: 600;
+            margin-top: 45px;
         }
 
         button{
