(cadastro,login) - tempo de espera feito

--- a/src/cabecalho/index.scss
+++ b/src/cabecalho/index.scss
@@ -65,7 +65,7 @@ p{
 
     .azulcarro {
 
-        width: 80px;
+        width: 60px;
     }
 }
 
@@ -92,10 +92,27 @@ p{
     }
 
    
-
-    .panda {
-        width: 80px;
+.agrupa-panda {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   
+    span {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 65px;
+        background-color: white;
+        padding: 20px;
+        font-size: 18px;
+        border-radius: 300px;
     }
+    p{
+        color: white;
+    }
+}
+
 }
 
 
