--- a/src/cadastroCliente/index.scss
+++ b/src/cadastroCliente/index.scss
@@ -16,9 +16,23 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
-    margin-top: -60px;
+    margin-top: 30px !important;
+
+.agrupa-cadastro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 70px;
+
+    h2 {
+        color: white ;
+        font-size: 70px;
+    }
+}
+
     .usuario {
-        width: 100px;
+        width: 145px;
         margin-bottom: 50px;
     }
     
@@ -35,26 +49,32 @@
             border: none;
             outline: none;
             border-radius: 5px;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
     }
     
     
-    .agrupa-botao {
+    .agrupa-botao-cadastro {
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         width: 410px;
     
-        p {
-            color: white;
-            margin-bottom: 9px;
+
+        .erro-cadastro {
+            font-size: 30px;
         }
+        
         button {
-            width: 170px;
+            width: 250px !important;
+            font-size: 30px !important;
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             padding: 10px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            margin-bottom: 40px;            
         }
     }
     
