--- a/src/login/index.scss
+++ b/src/login/index.scss
@@ -16,11 +16,26 @@ display: flex;
 flex-direction: column;
 width: 100%;
 align-items: center;
-margin-top: 100px;
-.usuario {
-    width: 160px;
-    margin-bottom: 50px;
+margin-top: 110px !important;
+
+.erro-login {
+    font-size: 30px;
+    margin-top: 30px;
 }
+
+.usuario-login {
+
+    .usuario {
+        width: 200px;
+    }
+
+    h2 {
+        font-size: 70px;
+        color: white;
+    }
+}
+
+
 
 
 .input-login {
@@ -29,8 +44,9 @@ margin-top: 100px;
 
 
     input {
-        padding: 15px;
-        width: 410px;
+        font-size: 18px;
+        width: 490px !important;
+        padding: 20px !important;
         margin-bottom: 30px;
         border: none;
         outline: none;
@@ -43,19 +59,21 @@ margin-top: 100px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 410px;
+    width: 480px !important;
 
     p {
         color: white;
         margin-bottom: 9px;
     }
     button {
-        width: 170px;
-        padding: 18px;
+        width: 210px !important;
+        padding: 18px !important;
+        font-size: 18px !important;
         border: none;
         border-radius: 5px;
         cursor: pointer;
     }
+
 }
 
 }
