--- a/src/ABC---PAGES---ADM/consultar-produto/index.scss
+++ b/src/ABC---PAGES---ADM/consultar-produto/index.scss
@@ -8,7 +8,7 @@
          height: 25vh;
           width: 100%;
          rotate: 0.2deg;
-         background-image: url(../../public/assets/images/fundo-cabe.png);
+  
     
         
     }
@@ -42,13 +42,20 @@
         width: 100%;
         align-items: center;
         margin-top: 110px;
+
+        h1{
+            font-size: 70px;
+            margin-top: -30px;
+            margin-bottom: 100px;
+        }
     }
   
 
     .fundaozao{
         height: 160vh;
         width: 100vw;
-        background-image: url(../../public/assets/images/fundao.png);
+        background-image: url(../../../public/assets/image/fundo-onda.png);
+        background-position: 50% 17%;
         background-repeat: no-repeat;
         background-size: cover;
     }
@@ -69,37 +76,42 @@
             display: flex;
             justify-content: center;
             height: 6vh;
-            width: 60vw;
+            width: 50vw;
             padding-left: 100px;
             border-radius: 10px;
             margin-right: 40px;
             outline: none;
+            border: none !important;
+            font-size: 25px;
             border: 1px solid #000;
         }
 
 
         .butao{
             display: flex;
-            width: 15vw;
-            height: 7vh;
+            width: 25vw !important;
+            height: 6vh;
             justify-content: center;
             align-items: center;
             border-radius: 10px;
             outline: none;
+            font-size: 30px;
+            border: none !important;
             position: relative;
             right: 4px;
             top: 1px;
-            border: #000 solid 1px;
+
         }
 
         .certo{
             display: flex;
             justify-content: center;
-            width: 17px;
-            height: 17px;
+            background-image: url(../../../public/assets/image/certo.png);
+            width: 20px;
+            height: 35px;
             position: relative;
             right: 38px;
-            top: -2px;
+            top: 0px;
             align-items: center;
 
 
@@ -119,8 +131,10 @@
 
        .preto{
         display: flex;
-        width: 15vw;
-        height: 30vh;
+        width: 12.8vw;
+        background-image: url(../../../public/assets/image/imagem-produto.png);
+        background-repeat: no-repeat;
+        height: 22.7vh;
        }
     }
 
@@ -137,11 +151,10 @@
            color: #fff;
         }
         .linhao{
-            width: 26vw;
+            width: 13vw;
             height: 2px;
             background-color: #fff;
-            position: relative;
-            top: -21px;
+            
         }
     }
 
@@ -158,10 +171,11 @@
             display: flex;
             justify-content: center;
             height: 6vh;
+            font-size: 35px;
             padding-left: 25px;
             border-radius: 10px;
             outline: none;
-            border: #000 1px solid;
+            border:none;
        
         }
     }
@@ -170,15 +184,22 @@
     .two-button{
         display: flex;
         flex-direction: row;
-        gap: 90px;
+        gap: 250px;
         justify-content: center;
         width: 50vw;
         align-items: center;
         margin-top: 25px;
+
+        .editar {
+            width: 400px !important;
+            padding: 15px;
+            font-size: 30px;
+        }
+        
     }
 
     .confirmar{
-        margin-left: 40px;
+        margin-left: 70px;
         width: 600px;
         color: #000;
         font-weight: bold;
@@ -193,10 +214,10 @@
     button{
         height: 55px;
         background-color: #fff;
-        width: 170px;
+        width: 870px !important;
         border: none;
         font-weight: bold;
-        color: #309CFF;
+        color: #0084ff;
     }
    
     }
