--- a/src/homeadm/index.scss
+++ b/src/homeadm/index.scss
@@ -25,7 +25,9 @@ height: 80vh;
         height: 70px;
         border-radius: 10px;
         
-        h1{
+        .H1{
+            font-size: 25px;
+            text-decoration: none;
             color: white;
             font-family: Arial, Helvetica, sans-serif;
         }
