--- a/src/produtos/index.scss
+++ b/src/produtos/index.scss
@@ -33,7 +33,8 @@
             flex-direction: row;
             color: #fff;
             align-items: center;
-            margin-left: 35px;               
+            margin-left: 35px;    
+            margin-bottom: 100px;           
         }
 
         #filtro{
