ultimo gabriel feito, falta pisos  ainda

--- a/src/produtos/index.scss
+++ b/src/produtos/index.scss
@@ -83,7 +83,7 @@
             }
 
         .preco{
-            margin-bottom: 0px;
+            margin-bottom: 15px;
             margin-top: -2px;
 
         }
@@ -102,6 +102,7 @@
             flex-direction: row;
             align-items: center;
             gap: 15px;
+            margin-bottom: 20px;
         }
 
         .divis{
@@ -124,7 +125,8 @@
 
         .txt{
             color: #000;
-
+            margin-top: 25px;
+            margin-bottom: 15px;
             text-align: center;
         }
 
