--- a/src/statuspedido/index.scss
+++ b/src/statuspedido/index.scss
@@ -44,7 +44,7 @@
     
 }
 .statusverde img {
-    margin: 51px;
+    margin-right: 59px;
 }
 
 .statuscinza {
@@ -65,6 +65,11 @@
     margin: 53px;
 }
 
+    .direita{
+        width: 80px;
+        margin-top: -17px !important;
+        margin-right: 7px;
+    }
 
     .statussinal {
      width: 80px;
@@ -78,7 +83,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-right: 7px;
+    margin-right: 9px;
     margin-bottom: 70px;
 }
 .statusinfo h3 {
