--- a/src/home/index.scss
+++ b/src/home/index.scss
@@ -10,7 +10,11 @@
             display: flex;
             flex-direction: row;
             margin-bottom: 100px;
+       
 
+            marquee {
+            width: 100vw;
+            }
 
             marquee>img {
                 border-radius: 10px;
