--- a/src/cabecalho/index.scss
+++ b/src/cabecalho/index.scss
@@ -107,12 +107,23 @@ p{
         padding: 20px;
         font-size: 18px;
         border-radius: 300px;
+        margin-bottom: 5px;
     }
     p{
         color: white;
+        margin-bottom: 10px;
     }
     .sair-conta {
+        border: 1px solid white;
+        padding: 10px;
+        border-radius: 5px ;
         cursor: pointer;
+    }
+
+    .sair-conta:hover{
+        transition: 0.7s;
+        color: rgb(168, 168, 168);
+        border: 1px solid rgb(165, 165, 165);
     }
 }
 
