--- a/src/home/index.scss
+++ b/src/home/index.scss
@@ -185,6 +185,9 @@
                 align-items: center;
                 justify-content: center;
                 margin-bottom: 250px;
+                h1 {
+                    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                }
 
                 h3 {
                     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
