--- a/src/ABC---PAGES---ADM/loginAdm/index.scss
+++ b/src/ABC---PAGES---ADM/loginAdm/index.scss
@@ -27,12 +27,14 @@
     
         .usuario {
             width: 200px;
-            margin-left: 240px;
+            margin-left: 147px;
         }
     
         h2 {
-            font-size: 40px;
+            font-size: 35px;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             color: white;
+            margin-bottom: 60px;
         }
     }
     
