--- a/src/home/index.scss
+++ b/src/home/index.scss
@@ -10,10 +10,10 @@
             display: flex;
             flex-direction: row;
             margin-bottom: 100px;
-       
+
 
             marquee {
-            width: 100vw;
+                width: 100vw;
             }
 
             marquee>img {
@@ -45,11 +45,12 @@
             .agrupa-info {
                 display: flex;
                 flex-direction: row;
-                margin-left: 10px;
+
+
             }
 
             .agrupa-info>div {
-                margin: 55px;
+                margin: 50px;
             }
 
 
@@ -100,9 +101,9 @@
 
 
         .subcontainer2 {
-            background-image: url(../../public/assets/image/fundo-onda.png);
-            background-repeat: no-repeat;
-            background-size: cover;
+            color: white;
+            background-image: url(../../public/assets/image/onda.PNG
+);
             width: 100%;
             height: 170vh;
             display: flex;
@@ -185,6 +186,7 @@
                 align-items: center;
                 justify-content: center;
                 margin-bottom: 250px;
+
                 h1 {
                     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
                 }
@@ -333,5 +335,48 @@
         max-width: 100%;
     }
 
-}
+    .cruz {
+        margin-left: -95px;
+    }
 
+    .cardd {
+        width: 280px;
+    }
+
+
+    .rodape {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 20vh;
+        background-color: #004586;
+    }
+    
+    .servic{
+        width: 850px;
+    }
+
+    .agrupa-info {
+        display: flex;
+        flex-direction: row;
+        max-width: 100%;
+
+    }
+
+    .agrupa-info>div {
+        margin: 5px;
+    }
+
+
+    .infos {
+        display: flex;
+        flex-direction: row;
+        width: 150px;
+    }
+
+    
+
+        .grupo-image>img {
+            cursor: pointer;
+        }
+    }
