--- a/src/cabecalho/index.scss
+++ b/src/cabecalho/index.scss
@@ -140,7 +140,7 @@ p{
 
 @media (max-width: 850px) {
     .mae{
-        max-width: 100%;
+        width: 800vw;
     }
 
     .agrupa-panda{
@@ -148,7 +148,7 @@ p{
     }
 
     .carrinho{
-        margin-left: -70px;
+        margin-left: -7px;
 
         p{
             margin-left: 20px
@@ -161,11 +161,33 @@ p{
         }
     }
 
+    .span{
+        height: 50px;
+        padding: 1px;
+        margin-top: 20px;
+    }
+
+    .encontre::placeholder{
+        margin: 25px;
+    }
+
+    .encontre{
+        margin-right: 1px;
+    }
+
     .azulcarro{
         width: 10px;
     }
 
+    .errados{
+        height: 54px;
+    }
+
+    .sair-conta{
+        width: 150px;
+    }
+
     .lupa{
-        margin-left: 150px;
+        margin-left: 1px;
     }
 }
